<resources>
    <string name="app_name">DinoPedia</string>
    <string name="info_nama">Nama Family</string>
    <string name="info_icon">Icon Family</string>
    <string name="info_deskripsi">Deskripsi Family</string>
    <string name="info_periode">Periode Family</string>
    <string name="info_fisik">Fisik Family</string>
    <string name="info_habitat">Habitat Family</string>
    <string name="info_lingkungan">Lingkungan Family</string>
    <string name="info_prilaku">Prilaku Family</string>
    <string name="nama_dino">Nama Dinosaurus</string>
    <string name="gambar_dino">Gambar Dinosaurus</string>
    <string name="deskripsi_dino">Deskripsi Dinosaurus</string>
    <string name="karakteristik_dino">Karakteristik Dinosaurus</string>
    <string name="kelompok_dino">Kelompok Dinosaurus</string>
    <string name="habitat_dino">Habitat Dinosaurus</string>
    <string name="makanan_dino">Makanan Dinosaurus</string>
    <string name="panjang_dino">Panjang Dinosaurus</string>
    <string name="tinggi_dino">Tinggi Dinosaurus</string>
    <string name="bobot_dino">Bobot Dinosaurus</string>
    <string name="kelemahan_dino">Kelemahan Dinosaurus</string>
    <string-array name="family_nama">
        <item>Theropoda</item>
        <item>Sauropoda</item>
        <item>Ornithopoda</item>
        <item>Ankylosauria</item>
        <item>Ceratopsia</item>
        <item>Pachycephalosauria</item>
        <item>Hypsilophodontidae</item>
        <item>Therizinosauridae</item>
    </string-array>
    <string-array name="family_icon">
        <item>@drawable/_dino1</item>
        <item>@drawable/_dino2</item>
        <item>@drawable/_dino3</item>
        <item>@drawable/_dino4</item>
        <item>@drawable/_dino5</item>
        <item>@drawable/_dino6</item>
        <item>@drawable/_dino7</item>
        <item>@drawable/_dino8</item>
    </string-array>
    <string-array name="family_deskripsi">
        <item>Predator berlari cepat dan ganas dengan kaki berotot dan cakar tajam.</item>
        <item>Herbivora raksasa berleher panjang dan berekor panjang dengan tubuh besar dan berat.</item>
        <item>Herbivora berlari cepat dengan kaki belakang kuat untuk melarikan diri dari pemangsa.</item>
        <item>Herbivora berbadan berat dengan pelindung tulang seperti baju besi di punggung.</item>
        <item>Herbivora berbadan besar dengan tanduk dan penutup kepala tebal </item>
        <item>Herbivora dengan tengkorak tebal mungkin untuk bertarung antarkelas </item>
        <item>Dinosaurus herbivora berukuran kecil dan gesit, berlari cepat dengan kaki belakang berotot.</item>
        <item>Omnivora dengan cakar besar di tangan dan mungkin memakan tumbuhan dan daging.</item>
    </string-array>
    <string-array name="family_periode">
        <item>Trias Akhir - Kapur Akhir (230 - 66 juta tahun lalu)</item>
        <item>Jura Awal - Kapur Akhir (201 - 66 juta tahun lalu)</item>
        <item>Jura Awal - Kapur Akhir (201 - 66 juta tahun lalu)</item>
        <item>Kapur Awal - Kapur Akhir (145 - 66 juta tahun lalu)</item>
        <item>Kapur Akhir (76 - 66 juta tahun lalu)</item>
        <item>Kapur Akhir (76 - 66 juta tahun lalu)</item>
        <item>Jura Akhir - Kapur Akhir (157 - 66 juta tahun lalu)</item>
        <item>Kapur Awal - Kapur Akhir (145 - 66 juta tahun lalu)</item>
    </string-array>
    <string-array name="family_fisik">
        <item>Dinosaurus berkaki dua yang terkenal dengan kelincahan dan giginya yang tajam</item>
        <item>Dinosaurus berleher panjang dan berekor panjang</item>
        <item>Dinosaurus herbivora berkaki dua yang gesit dan memiliki paruh</item>
        <item>Dinosaurus herbivora berkaki empat dengan badan berat dan pelindung tulang</item>
        <item>Dinosaurus herbivora berkaki empat dengan tanduk dan penutup kepala tebal.</item>
        <item>Dinosaurus herbivora berkaki dua dengan tengkorak tebal</item>
        <item>Dinosaurus herbivora berukuran kecil dan gesit dengan kaki belakang berotot</item>
        <item>Dinosaurus omnivora berkaki dua dengan cakar besar di tangannya. </item>
    </string-array>
    <string-array name="family_habitat">
        <item>Hutan, dataran luas, dan dekat sumber air.</item>
        <item>Hutan lebat dan dataran banjir.</item>
        <item>Hutan dan dataran luas.</item>
        <item>Hutan dan daerah bervegetasi lebat</item>
        <item> Dataran luas dan padang rumput</item>
        <item>Hutan dan daerah bervegetasi lebat.</item>
        <item>Hutan dan daerah tepi perairan</item>
        <item>Hutan dan daerah bervegetasi lebat.</item>
    </string-array>
    <string-array name="family_lingkungan">
        <item>dari hutan lebat hingga padang rumput terbuka</item>
        <item>Beriklim hangat dan lembab, dengan banyak tumbuhan tinggi</item>
        <item>Beriklim hangat dan sedang</item>
        <item>Beriklim hangat dan lembab</item>
        <item>Beriklim sedang, dengan variasi tumbuhan seperti pakis</item>
        <item>Beriklim hangat dan lembab, dengan variasi tumbuhan.</item>
        <item>Beragam, dari hutan lebat hingga daerah berawa.</item>
        <item>Beriklim hangat dan lembab</item>
    </string-array>
    <string-array name="family_prilaku">
        <item>Karnivora</item>
        <item>Herbivora</item>
        <item>Herbivora</item>
        <item>Herbivora</item>
        <item>Herbivora</item>
        <item>Herbivora</item>
        <item>Herbivora</item>
        <item>Omnivora</item>
    </string-array>
    <string-array name="dino_nama">
        <item>TRex</item>
        <item>Velociraptor</item>
        <item>Brachiosaurus</item>
        <item>Diplodocus</item>
        <item>Triceratops</item>
        <item>Parasaurolophus</item>
        <item>Ankylosaurus</item>
        <item>Nodosaurus</item>
        <item>Styracosaurus</item>
        <item>Centrosaurus</item>
        <item>Pachycephalosaurus</item>
        <item>Dracorex</item>
        <item>Orodromeus</item>
        <item>Parksosaurus</item>
        <item>Therizinosaurus</item>
        <item>likosaurus</item>
    </string-array>
    <string-array name="start">
        <item>0</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
    </string-array>
    <string-array name="end">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>9</item>
        <item>11</item>
        <item>13</item>
        <item>15</item>
    </string-array>
    <string-array name="dino_foto">
        <item>@drawable/_anak3</item>
        <item>@drawable/_anak2</item>
        <item>@drawable/_anak1</item>
        <item>@drawable/_anak4</item>
        <item>@drawable/_anak5</item>
        <item>@drawable/_anak6</item>
        <item>@drawable/_anak7</item>
        <item>@drawable/_anak8</item>
        <item>@drawable/_anak9</item>
        <item>@drawable/_anak10</item>
        <item>@drawable/_anak11</item>
        <item>@drawable/_anak12</item>
        <item>@drawable/_anak13</item>
        <item>@drawable/_anak14</item>
        <item>@drawable/_anak1</item>
        <item>@drawable/_anak16</item>
    </string-array>
    <string-array name="dino_deskripsi">
        <item>Tyrannosaurus Rex, sering disingkat sebagai T-Rex, adalah salah satu dinosaurus yang paling terkenal. Ini adalah dinosaurus karnivora besar yang hidup selama periode Kapur Akhir.</item>
        <item>Velociraptor adalah dinosaurus kecil dan lincah yang dikenal dengan cakar berbentuk sabitnya yang khas di setiap kakinya. Ini hidup selama periode Kapur Akhir dan terkenal karena penggambarannya dalam budaya populer, meskipun sering tidak akurat.</item>
        <item>Brachiosaurus adalah dinosaurus sauropoda raksasa dengan leher panjang dan ekor relatif pendek. Ini hidup selama periode Jura Akhir dan merupakan salah satu hewan darat terbesar yang pernah ada.</item>
        <item>Diplodocus adalah dinosaurus herbivora berleher panjang yang hidup selama periode Jura Akhir. Ini memiliki ekor panjang seperti cambuk dan merupakan salah satu dinosaurus terpanjang yang diketahui.</item>
        <item>Triceratops adalah dinosaurus herbivora besar yang dikenal dengan tiga tanduk wajahnya dan lambung tulang. Ini hidup selama periode Kapur Akhir dan merupakan salah satu spesies dinosaurus terakhir yang ada sebelum peristiwa kepunahan massal.</item>
        <item>Parasaurolophus adalah dinosaurus herbivora yang dikenal dengan jumbai panjang dan berongga di kepalanya, yang mungkin digunakan untuk komunikasi atau tampilan. Ini hidup selama periode Kapur Akhir.</item>
        <item>Ankylosaurus adalah dinosaurus berlapis bercangkang dengan gada tulang di ujung ekornya. Ini hidup selama periode Kapur Akhir dan sangat cocok untuk bertahan dari predator.</item>
        <item>Nodosaurus adalah dinosaurus herbivora yang dilapisi pelat tulang atau nodul untuk perlindungan. Ini hidup selama periode Kapur Akhir dan berhubungan erat dengan Ankylosaurus.</item>
        <item>Centrosaurus adalah dinosaurus herbivora yang dikenal dengan tanduk hidungnya yang menonjol. Ini hidup selama periode Kapur Akhir dan merupakan bagian dari keluarga ceratopsid.</item>
        <item>Pachycephalosaurus adalah dinosaurus bipedal dengan tengkorak tebal dan kubah, mungkin digunakan untuk kontes pukulan kepala atau tampilan. Ini hidup selama periode Kapur Akhir.</item>
        <item>Dracorex adalah dinosaurus relatif kecil yang dikenal dengan ornamen tengkoraknya yang rumit. Ini hidup selama periode Kapur Akhir dan kadang-kadang dianggap sebagai bentuk juvenil dari dinosaurus lain, seperti Pachycephalosaurus.</item>
        <item>Orodromeus adalah dinosaurus kecil dan cepat yang kemungkinan besar memakan tumbuhan. Ini hidup selama periode Kapur Akhir dan merupakan bagian dari keluarga ornitopoda.</item>
        <item>Parksosaurus adalah dinosaurus kecil yang herbivora dengan mulut berbentuk paruh. Ini hidup selama periode Kapur Akhir dan mirip dalam penampilan dengan ornitopoda lainnya.</item>
        <item>Therizinosaurus adalah dinosaurus herbivora besar dengan cakar panjang, mungkin digunakan untuk pertahanan atau mengumpulkan makanan. Ini hidup selama periode Kapur Akhir dan sering digambarkan sebagai salah satu dinosaurus paling aneh.</item>
        <item>Erlikosaurus adalah dinosaurus theropoda dengan leher panjang dan kepala relatif kecil. Ini hidup selama periode Kapur Awal dan dinamai dari Erlik, dewa kematian dalam mitologi Turk.</item>
        <item>Likosaurus adalah salah satu dinosaurus terkecil yang pernah ditemukan dan kerabat dekat Tyrannosaurus Rex.</item>
    </string-array>
</resources>